deleted src and corrected li alignment

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   --grey3: #A5A5A5;
   --grey4: #CCCCCC;
   --white: #F2F2F2;
-  --margin: 10px;
+  --margin: 12px;
 }
 
 body{
